Font change and dynamic clouds

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Grenze:wght@300&family=Homemade+Apple&family=Jim+Nightshade&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Grenze:wght@300&family=Jim+Nightshade&family=Permanent+Marker&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>About Me</title>
 
 </head>
@@ -15,7 +15,7 @@
         <img class="top-cloud" src="img/cloud.png" alt="cloud image">
         <div>
             <h1>I'm Dávid</h1>
-            <p>a <span class="pro"> pro</span>grammer.</p>
+            <p class="whoami">a <span class="pro"> pro</span>grammer.</p>
         </div>
 
 
