--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="middle-container">
         <div class="profile">
-            <img class="avatar" src="img/avatar.png" alt="avatar photo">
+            <img class="avatar" src="img/avatar-blue.png" alt="avatar photo">
             <h2>Hello.</h2>
             <p>I am mobile and web developer, open-source advocate and Linux enthusiast. And I &#9829 HEMA. </p>
         </div>
@@ -34,12 +34,12 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="coding" src="img/coding.svg" alt="compiter">
+                <img class="coding-img" src="img/devices.svg" alt="compiter">
                 <h3>Lorem & Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
             </div>
             <div class="skill-row">
-                <img class="linux" src="img/linux.svg" alt="">
+                <img class="linux-img" src="img/linux.svg" alt="">
                 <h3>Lorem Ipsum Dolor</h3>
                 <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
             </div>
