--- a/index.html
+++ b/index.html
@@ -35,13 +35,19 @@
             <h2>My Skills.</h2>
             <div class="skill-row">
                 <img class="coding-img" src="img/devices.svg" alt="compiter">
-                <h3>Lorem & Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                <div class="coding-detail">
+                    <h3>Lorem & Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                </div>
+
             </div>
             <div class="skill-row">
                 <img class="linux-img" src="img/linux.svg" alt="">
-                <h3>Lorem Ipsum Dolor</h3>
-                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                <div class="linux-detail">
+                    <h3>Lorem Ipsum Dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                </div>
+
             </div>
         </div>
         <hr>
